--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,27 @@
 body{
   background: rgb(238,238,238,.8);
+  font-family: sans-serif;
+}
+
+table {
+  text-align: center;
+}
+
+td {
+  font-size: 20px;
+}
+
+td {
+  border: 1px solid #bbb;
+  padding: 2px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+thead {
+  font-size: 24px;
+  font-weight: bold;
+  padding: 8px;
 }
